modified:   Home.html     modified:   style.css

--- a/Home.html
+++ b/Home.html
@@ -304,7 +304,7 @@
           <button>Submit</button>
         </div>    
    </section>
-   <div class="down">
+   <div class="downn">
     <p>&copy;2024 ERASMUS + GREATER All Rights Reserved</p>
    </div>
   </body>
